--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,7 @@ label {
   border: 4px solid white;
   padding: 2rem;
   color: white;
+  border-radius: 8px;
   font-size: 20px;
   -webkit-box-shadow: 2px 3px 59px -15px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 2px 3px 59px -15px rgba(0, 0, 0, 0.75);
@@ -76,5 +77,14 @@ label {
     align-items: center;
     gap: 0.5rem;
     overflow-x: hidden;
+    padding: 1rem;
+  }
+
+  .container {
+    width: 90%;
+  }
+
+  .result {
+    width: 90%;
   }
 }
