--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,8 @@ body {
   gap: 3rem;
   font-family: sans-serif;
   background-image: url("https://marketplace.canva.com/EAFHyccmd3I/1/0/1600w/canva-brown-and-green-illustration-desktop-wallpaper-uFoN-4UuMEk.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 input {
@@ -48,7 +50,7 @@ label {
   display: flex;
   align-items: center;
   gap: 0.5rem;
-  margin-top: 1rem;
+  margin-top: 0.5rem;
 }
 
 .form-footer input {
