--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
   font-family: "Roboto", sans-serif;
   padding-top: 2rem;
   margin: 0;
-  background-image: url("/9019808.jpg");
+  background-image: url("https://img.freepik.com/vetores-gratis/fundo-de-conexao-gradiente_23-2150462053.jpg?semt=ais_hybrid&w=740");
   background-size: cover;
   background-position: center;
   color: #333;
